--- a/team/index.html
+++ b/team/index.html
@@ -79,7 +79,7 @@
     <h4><a href="wangwenyu2" class="off">Wang Wenyu</a></h4>
     <p><i>Since 2023</i></p>
 
-    <p><i></i></p>
+    <p><i>Cybersecurity Student and Valorant Pro</i></p>
   </div>
 
   <div class="col-sm-6 clearfix">
@@ -87,7 +87,7 @@
     <h4><a href="shuxin" class="off">Shu Xin</a></h4>
     <p><i>Since 2023</i></p>
 
-    <p><i></i></p>
+    <p><i>Cybersecurity Student and Valorant Pro</i></p>
   </div>
 
 </div>
