--- a/team/index.html
+++ b/team/index.html
@@ -162,7 +162,7 @@
     <p><img src="/images/teampic/bijiaze.jpg" style="width: 115px; height: 115px; object-fit: cover; float: left; margin-right: 10px;" /></p>
     <h4><a href="bijiaze" class="off">Bi Jiaze</a></h4>
     <p><i>graduated 2023</i></p>
-
+    <p><i>Co-Supervised with Prof.Gao</i></p>
     <p><i>Now pursuing Master at XMU</i></p>
   </div>
 
@@ -183,7 +183,7 @@
     <h4><a href="wangyingbo" class="off">Wang Yingbo</a></h4>
     <p><i>graduated 2022</i></p>
 
-    <p><i>Now pursuing Master at XXU</i></p>
+    <p><i>Now pursuing Master at DUT</i></p>
   </div>
 
   <div class="col-sm-6 clearfix">
