--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
 		<span class="icon-bar"></span>
 	  </button>
 	
-    <a class="navbar-brand" href="/">AIE Lab Room 766&423</a>
+    <a class="navbar-brand" href="/">AIE Lab Room 766</a>
 	</div>
 
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
