--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="AICV Lab -- About">
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="canonical" href="/about/">
-	<link rel="shortcut icon" type ="image/x-icon" href="/images/favicon.ico">
+	<link rel="shortcut icon" type ="image/x-icon" href="/images/ahau.ico">
 	<link rel="stylesheet" href="/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 	<link rel="stylesheet" href="/css/academicons/css/academicons.css">
 
