--- a/contact/index.html
+++ b/contact/index.html
@@ -58,9 +58,31 @@
 <h2 id="aicv-lab">AICV Lab</h2>
 <p>Our main AICV Lab is located in J.B. Hunt building (<strong>Room 447</strong>):</p>
 
-<div style="position:relative;text-align:right;height:500px;width:100%;">
+<!-- <div style="position:relative;text-align:right;height:500px;width:100%;">
   <iframe width="100%" height="500" src="https://maps.google.com/maps?q=J.B.%20Hunt%20Transport%20Services%20Center%20for%20Academic%20Excellence%20(JBHT)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-</div>
+</div> -->
+
+//新建一个容器
+<div id="wrapper"></div>
+//设置宽和高
+<style>
+	#wrapper{
+		width: 500px;
+		height: 500px;
+	}
+</style>
+
+//引入js
+<script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.8&key=354c91335b600f2c9793cf3c60bb879f"></script> 
+* 这里需要刚才申请的Key
+
+<script>
+	//初始化地图插件
+	window.onload = function(){
+		var map = new AMap.Map('wrapper');
+	}
+</script>
+
 
 <h2 id="robotic-lab">Robotic Lab</h2>
 <p>We are establishing Robotic Lab focuses on robotic control projects, which is located in Bell Engineering Center (<strong>Room 4134C</strong>):</p>
