--- a/contact/index.html
+++ b/contact/index.html
@@ -56,25 +56,25 @@
 <h1 id="lab-locations">Lab Locations</h1>
 
 <h2 id="aicv-lab">AICV Lab</h2>
-<p>Our main AICV Lab is located in J.B. Hunt building (<strong>Room 447</strong>):</p>
+<p>Our main 766 Lab is located in Central West building (<strong>Room 766</strong>):</p>
 
 <!-- <div style="position:relative;text-align:right;height:500px;width:100%;">
   <iframe width="100%" height="500" src="https://maps.google.com/maps?q=J.B.%20Hunt%20Transport%20Services%20Center%20for%20Academic%20Excellence%20(JBHT)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 </div> -->
 
-//新建一个容器
+
 <div id="wrapper"></div>
-//设置宽和高
+
 <style>
 	#wrapper{
-		width: 500px;
+		width: 100%;
 		height: 500px;
 	}
 </style>
 
-//引入js
+
 <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.8&key=354c91335b600f2c9793cf3c60bb879f"></script> 
-* 这里需要刚才申请的Key
+
 
 <script>
 	//初始化地图插件
